# Tasks-Explorer

./: .clang-format  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  License.txt  Makefile  README.md  Tasks Explorer-Info.plist  appcast.xml  daemon_install.sh  gen_rpc.sh  intro.rtf  make_update.sh  todo.txt
Common/: data_types.h  tasks_explorer.h  tasks_explorer.x  tasks_explorer_client.c  tasks_explorer_clnt.c  tasks_explorer_server.c  tasks_explorer_svc.c  tasks_explorer_xdr_c.c
Tasks Explorer/: ColumnsBinder.h  ColumnsBinder.m  DaemonDataSource.h  DaemonDataSource.m  DataSource.h  DataSource.m  EnvVariable.h  EnvVariable.m  FlatViewController.h  FlatViewController.m  GraphView.h  GraphView.m  ImageAndTextCell.m  MachOReader.h  MachOReader.m  MachOViewController.h  MachOViewController.m  MainWindowController.h  MainWindowController.m  OutlineViewEx.h  OutlineViewEx.m  ProcessInfo.h  ProcessInfo.m  Settings.h  Settings.m  SettingsController.h  SettingsController.m  StackInfoController.h  StackInfoController.m  StackRecord.h  StackRecord.m  TaskInfoController.h  TaskInfoController.m  TasksInfoManager.h  TasksInfoManager.m  Tasks_ExplorerAppDelegate.h  Tasks_ExplorerAppDelegate.m  Tasks_Explorer_Prefix.pch  ThreadInfo.h  ThreadInfo.m  (+8 more)
Tasks Explorer.xcodeproj/: alexanderstavonin.mode1v3  alexanderstavonin.pbxuser  kaa-python.mode1v3  kaa-python.pbxuser  kaa-python.tm_build_errors  kaa.mode1v3  kaa.pbxuser  project.pbxproj
Tasks Explorer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Tasks Explorer.xcodeproj/project.xcworkspace/xcuserdata/astavonin.xcuserdatad/: UserInterfaceState.xcuserstate
Tasks Explorer.xcodeproj/xcuserdata/astavonin.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
Tasks Explorer.xcodeproj/xcuserdata/astavonin.xcuserdatad/xcschemes/: Tasks Explorer.xcscheme  release.xcscheme  rpc builder.xcscheme  tasksexplorerd.xcscheme  xcschememanagement.plist
Tasks Explorer/English.lproj/: CallStack.xib  FlatView.xib  MachOView.xib  MainMenu.xib  Settings.xib  TaskInfo.xib  TreeView.xib
Tasks Explorer/Images/: General.icns  Matrix.icns  Updates.icns  info.icns  process_remove.icns  remove.icns  warning.icns
Testing/Temporary/: CTestCostData.txt
client/console/: CMakeLists.txt  main.cpp
keys/: dsa_priv.pem  dsa_pub.pem
release/: Tasks Explorer.pkg
rpc/: CMakeLists.txt  rpc.proto
setup.pmdoc/: 01contents-contents.xml  01contents.xml  02tasksexplorerd-contents.xml  02tasksexplorerd.xml  03com-contents.xml  03com.xml  index.xml
tasksexplorerd/: CMakeLists.txt  afx.h  bundleinforeader.c  bundleinforeader.h  com.macosinternals.tasksexplorerd.plist  external_utils.c  external_utils.h  helpers.c  helpers.h  main.c  man_info.c  man_info.h  server.c  server.h  stack_info.c  stack_info.h  taskinfomanager.c  taskinfomanager.h
tasksexplorerd/app/: CMakeLists.txt  info_manager.cpp  info_manager.h  main.cpp  te_service_impl.cpp  te_service_impl.h
tasksexplorerd/include/: dumpable.h  errors.h  errors.hpp  logger.h  logger.hpp  task.h  tasks.h  tasks_monitor.h  utils.h
tasksexplorerd/task/: CMakeLists.txt  mach_helpers.cpp  mach_helpers.h  system_helpers.cpp  system_helpers.h  task.cpp  task.h  task_impl.cpp  task_impl.h  tasks_monitor.cpp  tasks_monitor.h  tasks_monitor_impl.cpp  tasks_monitor_impl.h
tasksexplorerd/tests/: CMakeLists.txt  bench_task.cpp  helpers.cpp  helpers.h  helpers.hpp  main.cpp  tasks_base.cpp  tasks_integration.cpp
tasksexplorerd/utils/: CMakeLists.txt  utils.cpp  utils.h
